<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent" >

    <TextView
        android:id="@+id/activity_main_infos_client"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="22dp"
        android:text="@string/activity_main_infos_client"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_infos_client"
        android:layout_marginTop="25dp"
        android:layout_toLeftOf="@+id/activity_main_infos_client"
        android:text="@string/activity_main_textview_nom" />

    <EditText
        android:id="@+id/editText1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView1"
        android:layout_alignBottom="@+id/textView1"
        android:layout_alignLeft="@+id/activity_main_infos_client"
        android:layout_alignParentRight="true"
        android:layout_marginLeft="17dp"
        android:ems="10"
        android:inputType="textPersonName" >

        <requestFocus />
    </EditText>

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editText1"
        android:layout_marginTop="42dp"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/activity_main_textview_prenom" />

    <EditText
        android:id="@+id/activity_main_editext_prenom"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/textView2"
        android:layout_alignBottom="@+id/textView2"
        android:layout_alignLeft="@+id/editText1"
        android:layout_alignParentRight="true"
        android:ems="10"
        android:inputType="textPersonName" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/activity_main_editext_prenom"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="20dp"
        android:text="@string/activity_main_infos_options"
        android:textAppearance="?android:attr/textAppearanceMedium" />

    <TextView
        android:id="@+id/textView4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerVertical="true"
        android:layout_toLeftOf="@+id/editText1"
        android:text="@string/activity_main_textview_couleur" />

    <Spinner
        android:id="@+id/activity_main_spinner_couleur"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity_main_editext_prenom"
        android:layout_alignParentRight="true"
        android:layout_centerVertical="true" />

    <TextView
        android:id="@+id/textView5"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignRight="@+id/textView4"
        android:layout_below="@+id/activity_main_spinner_couleur"
        android:layout_marginTop="55dp"
        android:text="@string/activity_main_textview_boite_de_vitesse" />

    <Spinner
        android:id="@+id/activity_main_spinner_boite_de_vitesse"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/activity_main_spinner_couleur"
        android:layout_alignParentRight="true"
        android:layout_alignTop="@+id/textView5" />

    <Button
        android:id="@+id/activity_main_button_valider"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:text="@string/activity_main_button_valider" />

</RelativeLayout>